--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -93,17 +93,17 @@
      </div>
     </div>
 </section>
-<!----------------(studio-section6 End)------------------>
+<!----------------(Apartment-section6 End)------------------>
 <hr class = "section_hr">
-<!----------------(Studio-section7 Start)-------------->
+<!----------------(Apartment-section7 Start)-------------->
 <section id = "apartment-section6">
   
 </section>
-<!----------------(Studio-section7 End)---------------->
+<!----------------(Apartment-section7 End)---------------->
 <hr class = "section_hr">
-<!----------------(Studio-section8 Start)---------------->
+<!----------------(Apartment-section8 Start)---------------->
 
-  <section id = "studio-section8">
+  <section id = "apartment-section8">
     <div class = "container">
      <div class = "row">
      <div class = "col-lg-6 col-12">
