--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,7 +24,7 @@
           </li>
         -->
         <li class="nav-item rounded">
-          <a class="nav-link "  routerLink = "visit" routerLinkActive = "active"[routerLinkActiveOptions] = "{exact : true}">Home</a>
+          <a class="nav-link "  routerLink = "" routerLinkActive = "active"[routerLinkActiveOptions] = "{exact : true}">Home</a>
         </li>
         <li class="dropdown nav-item">
           <a class="dropbtn nav-link" routerLinkActive = "active">Visit Us
@@ -70,7 +70,7 @@
             <a class="nav-link" routerLink = "/products" routerLinkActive = "active">Our Products</a>
           </li>
           <li class="nav-item rounded">
-            <a class="nav-link" routerLink = "ourstroy" routerLinkActive = "active">Our Story</a>
+            <a class="nav-link" routerLink = "our-story" routerLinkActive = "active">Our Story</a>
           </li>
           <li class="nav-item rounded">
             <a class="nav-link" routerLink = "contact" routerLinkActive = "active">Contact Us</a>
