--- a/src/app/page/visit-us/the-studio/the-studio.component.scss
+++ b/src/app/page/visit-us/the-studio/the-studio.component.scss
@@ -22,7 +22,7 @@ h2{
 #studio-banner{
 	padding-top: 10rem;
     padding-bottom: 10rem;
-    background: linear-gradient(-45deg, #38494dcc, #38494dcc), url("/assets/img/visit/studio-banner1.jpg");
+    background: linear-gradient(-45deg, #38494d99, #38494d99), url("/assets/img/visit/studio-banner1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 	background-position: center;
@@ -31,19 +31,19 @@ h2{
 
 	@keyframes change {
 		0%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("/assets/img/visit/studio-banner1.jpg");
+			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner1.jpg");
 		}
 		25%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("/assets/img/visit/studio-banner2.jpg");
+			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner2.jpg");
 		}
 		50%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("/assets/img/visit/studio-banner3.jpg");
+			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner3.jpg");
 		}
 		75%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("/assets/img/visit/studio-banner4.jpg");
+			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner4.jpg");
 		}
 		100%{
-			background-image:  linear-gradient(-45deg, #38494dcc, #38494dcc),url("/assets/img/visit/studio-banner5.jpg");
+			background-image:  linear-gradient(-45deg, #38494d99, #38494d99),url("/assets/img/visit/studio-banner5.jpg");
 		}
 		
 	}
@@ -104,6 +104,7 @@ h2{
 	.col1{
 		padding-top: 10rem;
 		text-align: right;
+		padding-right: 2rem;
 	}
 	
 	h2{
@@ -262,6 +263,7 @@ h2{
 
 	.col2{
 		padding-top: 10rem;
+		padding-left: 2rem;
 	}
 			
 	h2{
@@ -329,7 +331,9 @@ h2{
 	
 	.col2{
 		padding-top: 10rem;
+		padding-right: 2rem;
 		text-align: end;
+
 		h2{
 			text-transform: capitalize;
 			&:after{
@@ -449,6 +453,7 @@ h2{
 	
 	.col2{
 		padding-top: 6rem;
+		padding-left: 2rem;
 	}
 	h2{
 		text-transform: capitalize;
@@ -481,7 +486,7 @@ h2{
 
 		img{
 			width: 100%;
-			height: 480px;
+			height: 100%;
 			object-fit: cover;
 		}
 		
@@ -495,11 +500,16 @@ h2{
 
 /**==========++++++(Responsive SCSS)++++++++++============*/
 @media(max-width:991px) {
-
+	h2{
+		&:after{
+		 margin-top: 5px
+		}
+	}
 #studio-section2{
 	.col1{
 		padding-top: 0rem;
 		text-align: left;
+		padding-right: 0rem;
 
 		h2{
 			&:after{
@@ -522,6 +532,7 @@ h2{
 #studio-section4{
 	.col2{
 		padding-top: 0rem;
+		padding-left: 0rem;
 
 		p{
 			padding-top: 0.5rem;
@@ -570,6 +581,7 @@ h2{
 	}
   .col2{
 	  padding-top: 1rem;
+	  padding-left: 0rem;
 
 	  h2{
 		  margin-bottom: 0.5rem;
