--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1035,32 +1035,32 @@ hr{
 /*****=================(product Page Scss)=============*******/
 
 #product_list_banner{
-	background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url("assets/img/product/banner1.jpg");
+	background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("assets/img/product/banner1.jpg");
 	padding-top: 8rem;
     padding-bottom: 8rem;
-	animation: change 20s infinite ease-in-out;
+	animation: productchange 20s infinite ease-in-out;
 
 
-	@keyframes change {
+	@keyframes productchange {
 		0%{
-			background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url("assets/img/product/banner1.jpg");
+			background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("assets/img/product/banner1.jpg");
 		}
 		25%{
-			background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url("assets/img/product/banner2.jpg");
+			background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("assets/img/product/banner2.jpg");
 		}
 		50%{
-			background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url("assets/img/product/banner3.jpg");
+			background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("assets/img/product/banner3.jpg");
 		}
 		75%{
-			background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url("assets/img/product/banner4.jpg");
+			background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("assets/img/product/banner4.jpg");
 		}
 		100%{
-			background-image: linear-gradient(-45deg, rgba(56, 73, 77, 0.5), rgba(56, 73, 77, 0.5)),url("assets/img/product/banner5.jpg");
+			background-image: linear-gradient(-45deg, #38494d99, #38494d99),url("assets/img/product/banner5.jpg");
 		}
 
 	}
 
-	h2{
+	h1{
 		color: #fff;
 	}
 }
