--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -70,6 +70,9 @@
             <a class="nav-link" routerLink = "/products" routerLinkActive = "active">Our Products</a>
           </li>
           <li class="nav-item rounded">
+            <a class="nav-link" routerLink = "our-process" routerLinkActive = "active">Our Process</a>
+          </li>
+          <li class="nav-item rounded">
             <a class="nav-link" routerLink = "our-story" routerLinkActive = "active">Our Story</a>
           </li>
           <li class="nav-item rounded">
