--- a/src/app/product/product-detail/product-detail.component.scss
+++ b/src/app/product/product-detail/product-detail.component.scss
@@ -2,3 +2,35 @@
     transform: rotate(90deg);
 }
 
+.size_radio{
+    display: contents;  
+}
+
+.size_radio .varients{
+    float: left;
+    width: auto;
+    position: relative;
+}
+.size_radio input[type="radio"] {
+    appearance: none;
+    display: none;
+}
+
+.size_radio label {
+    margin:3px;
+    border:  1px solid #000;
+    padding:0.5rem 1rem;
+    height: 40px;
+    text-align: center;
+    cursor:pointer;
+    overflow: hidden;
+    transition: linear 0.3s;
+    color: #000;
+}
+
+.size_radio input[type="radio"]:checked + label {
+    border:  2px solid #000;
+    transition: 0.3s;
+    color:#000;
+}
+
