--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -161,7 +161,7 @@
                     <h6>Choose Size</h6>
                   </div>
                 <div class = "varients">
-                  <input type="radio" id="varient1" name="radio-group" checked>
+                  <input type="radio" id="varient1" name="radio-group">
                   <label for="varient1">Apple fgj</label>
                 </div>
                 <div class = "varients">
