--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -145,24 +145,24 @@
                         </div>
                         <form>
                             <div class="form-group py-3">
-                              <label for="exampleFormControlInput1" class="form-label">First Name</label>
-                              <input type="text" class="form-control" placeholder="Rosy" name = "firstname"  id="exampleFormControlInput1" >
+                              <label class="form-label">First Name</label>
+                              <input type="text" class="form-control" placeholder="Rosy" name = "firstname">
                             </div>
                             <div class="form-group py-3">
                               <label for="exampleFormControlInput2" class="form-label">Last Name</label>
-                              <input type="text" class="form-control" name = "lastname" placeholder = "Smith" id="exampleFormControlInput1" >
+                              <input type="text" class="form-control" name = "lastname" placeholder = "Smith">
                             </div>
                             <div class="form-group py-3">
-                              <label for="exampleInputEmail1" class="form-label">Email</label>
-                              <input type="email" class="form-control" name = "email"  name = "email" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="rosysmith@gmail.com">
+                              <label class="form-label">Email</label>
+                              <input type="email" class="form-control" name = "email"   aria-describedby="emailHelp" placeholder="rosysmith@gmail.com">
                             </div>
                             <div class="form-group py-3">
-                              <label for="exampleFormControlInput1" class="form-label">Mobile Number</label>
-                              <input type="text" class="form-control" placeholder="1234567890"   id="exampleFormControlInput1" >
+                              <label class="form-label">Mobile Number</label>
+                              <input type="text" class="form-control" placeholder="1234567890" >
                             </div>
                             <div class="form-group py-3">
-                              <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-                              <textarea class="form-control" id="exampleFormControlTextarea1" name = "textarea" placeholder = "Type your message here!" rows="3" ></textarea>
+                              <label class="form-label">Message</label>
+                              <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3" ></textarea>
                             </div>
                             <div class = "text-center pt-4">
                               <button type = "submit" class  = "btn blue-btn mt-4" id="button-addon2">Send a Massage</button>
