--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,91 +2,100 @@
   <div class = "top-footer">
     <div class = "container">
       <div class = "row">
-        <div class = "col-lg-3 col-md-6  col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6  col-12">
           <div>
             <h4>About Us</h4>
             <p class = "mb-0 pt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In auctor egestas purus, at pharetra urna. Aliquam commodo eu justo in iaculis. Nulla facilisi. </p>
           </div>
         </div>
-        <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6 col-12">
           <div>
             <h4>Company</h4>
             <ul class = "navbar-nav">
-           <!----   <li class = "nav-item" *ngFor="let company of company">
+              <!----   <li class = "nav-item" *ngFor="let company of company">
                 <a [routerLink] = "company.link" class = "nav-link">{{company.menu_title}}</a>
-              </li>  -->
-
+                </li>  -->
               <li class = "nav-item">
                 <a href = "#" class = "nav-link">Home</a>
-                </li>
+              </li>
               <li class = "nav-item">
                 <a href = "#" class = "nav-link">Visit Us</a>
-                </li>
-                <li class = "nav-item">
+              </li>
+              <li class = "nav-item">
                 <a routerLink = "/products" class = "nav-link">Our Products</a>
-                </li>
-                <li class = "nav-item">
-                <a href = "#" class = "nav-link">Our Story</a>
-                </li>
-                <li class = "nav-item">
-                  <a routerLink = "contact" class = "nav-link">Contact Us</a>
-                  </li>
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "/our-process" class = "nav-link">Our Process</a>
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "contact" class = "nav-link">Contact Us</a>
+              </li>
             </ul>
           </div>
         </div>
-        <div class = "col-lg-3 col-md-6 col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6 col-12">
           <div>
             <h4>Support</h4>
             <ul class = "navbar-nav">
-            <!---- <li class = "nav-item" *ngFor="let supportLinks of support">
+              <!---- <li class = "nav-item" *ngFor="let supportLinks of support">
                 <a [routerLink]="['pages', supportLinks.seo_title]" class = "nav-link">{{supportLinks.title}}</a>
-              </li>  -->
+                </li>  -->
               <li class = "nav-item">
-                <a href = "#" class = "nav-link">Our Story</a>
-                </li>
-                <li class = "nav-item">
+                <a routerLink = "/our-story" class = "nav-link">Our Story</a>
+              </li>
+              <li class = "nav-item">
                 <a href = "#" class = "nav-link">Career</a>
-                </li>
-                <li class = "nav-item">
-                <a href = "#" class = "nav-link">Terms & Conditions</a>
-                </li>
-                <li class = "nav-item">
-                  <a routerLink = "/faqs" class = "nav-link">FAQs</a>
-                  </li>
-                <li class = "nav-item">
-                <a href = "#" class = "nav-link">Privacy & Cookie policy</a>
-                </li> 
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "/terms-and-conditions"href = "#" class = "nav-link">Terms & Conditions</a>
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "/faqs" class = "nav-link">FAQs</a>
+              </li>
+              <li class = "nav-item">
+                <a routerLink = "/privacy-policy" class = "nav-link">Privacy & Cookie policy</a>
+              </li>
             </ul>
           </div>
         </div>
-        <div class = "col-lg-3 col-md-6  col-sm-6 col-12">
+        <div class = "col-lg-3 col-md-6 col-12">
           <div class = "contact_details">
             <h4>Contact Us</h4>
             <div>
               <h6>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
-                  <desc>Created with Fabric.js 1.7.22</desc>
-                  <defs>
-                  </defs>
-                  <g transform="translate(128 128) scale(0.72 0.72)" style="">
-                    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)" >
-                      <path d="M 38.789 51.211 l 10.876 10.876 c 0.974 0.974 2.471 1.194 3.684 0.543 l 13.034 -6.997 c 0.964 -0.518 2.129 -0.493 3.07 0.066 l 19.017 11.285 c 1.357 0.805 1.903 2.489 1.268 3.933 c -1.625 3.698 -4.583 10.476 -5.758 13.473 c -0.247 0.631 -0.615 1.209 -1.127 1.652 c -12.674 10.986 -37.89 -2.4 -57.191 -21.701 C 6.358 45.039 -7.028 19.823 3.958 7.149 c 0.444 -0.512 1.022 -0.88 1.652 -1.127 c 2.996 -1.175 9.775 -4.133 13.473 -5.758 c 1.444 -0.635 3.128 -0.089 3.933 1.268 l 11.285 19.017 c 0.558 0.941 0.583 2.106 0.066 3.07 L 27.37 36.651 c -0.651 1.213 -0.431 2.71 0.543 3.684 C 27.913 40.335 38.789 51.211 38.789 51.211 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-                      <path d="M 60.282 42.839 l 13.376 -13.376 l 5.134 5.134 c 0.843 0.843 2.284 0.458 2.592 -0.695 l 8.561 -31.95 C 90.254 0.8 89.2 -0.254 88.048 0.054 l -31.95 8.561 c -1.152 0.309 -1.538 1.749 -0.695 2.592 l 5.134 5.134 L 47.161 29.718 c -0.628 0.628 -0.628 1.646 0 2.274 l 10.847 10.847 C 58.636 43.467 59.654 43.467 60.282 42.839 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-                    </g>
-                  </g>
+                <svg _ngcontent-iev-c64="" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 59.997 59.997" xml:space="preserve" style="enable-background: new 0 0 59.997 59.997;"><g _ngcontent-iev-c64=""><path _ngcontent-iev-c64="" d="M44.071,38.385c-1.275-0.728-2.597-0.958-3.721-0.646c-0.844,0.234-1.532,0.768-1.995,1.546
+                  c-1.021,1.221-2.287,2.646-2.592,2.867c-2.371,1.604-4.252,1.414-6.295-0.629L17.982,30.037c-2.045-2.045-2.233-3.928-0.631-6.292
+                  c0.224-0.31,1.649-1.575,2.869-2.595c0.778-0.464,1.312-1.151,1.546-1.996c0.311-1.123,0.081-2.444-0.653-3.731
+                  c-0.173-0.296-4.289-7.27-8.085-9.277c-1.929-1.019-4.255-0.67-5.796,0.872L4.695,9.555c-7.401,7.402-6.031,16.596,3.962,26.588
+                  l14.705,14.706c4.539,4.54,8.937,7.326,13.068,8.281c1.096,0.253,2.17,0.38,3.224,0.38c3.717,0,7.169-1.573,10.296-4.7l2.537-2.537
+                  c1.541-1.541,1.892-3.87,0.872-5.796C51.351,42.682,44.378,38.564,44.071,38.385z M51.073,50.858l-2.537,2.537
+                  c-6.568,6.568-14.563,5.237-23.76-3.961L10.071,34.728c-9.197-9.196-10.53-17.19-3.962-23.76l2.537-2.537
+                  c0.566-0.566,1.313-0.862,2.07-0.862c0.467,0,0.939,0.112,1.376,0.344c3.294,1.743,7.256,8.454,7.289,8.511
+                  c0.449,0.787,0.62,1.608,0.457,2.196c-0.1,0.36-0.323,0.634-0.684,0.836l-0.15,0.104c-0.853,0.712-2.883,2.434-3.308,3.061
+                  c-0.612,0.904-1.018,1.792-1.231,2.665c-0.711-1.418-1.285-3.06-1.474-4.881c-0.058-0.549-0.547-0.94-1.099-0.892
+                  c-0.549,0.058-0.948,0.549-0.892,1.099c0.722,6.953,6.13,11.479,6.359,11.668c0.025,0.021,0.055,0.028,0.081,0.046l10.612,10.612
+                  c0.045,0.045,0.091,0.084,0.136,0.127c0.035,0.052,0.058,0.109,0.104,0.155c0.189,0.187,4.704,4.567,11.599,5.283
+                  c0.035,0.003,0.07,0.005,0.104,0.005c0.506,0,0.94-0.383,0.994-0.896c0.057-0.55-0.343-1.041-0.892-1.099
+                  c-2.115-0.219-3.988-0.839-5.549-1.558c0.766-0.23,1.545-0.612,2.334-1.147c0.627-0.426,2.349-2.454,3.06-3.307l0.104-0.151
+                  c0.202-0.359,0.476-0.583,0.836-0.684c0.585-0.159,1.408,0.007,2.185,0.45c1.879,1.102,7.073,4.56,8.521,7.296
+                  C52.197,48.558,51.989,49.942,51.073,50.858z"></path><path _ngcontent-iev-c64="" d="M27.362,0.487c-0.553,0-1,0.447-1,1s0.447,1,1,1c16.892,0,30.635,13.743,30.635,30.635c0,0.553,0.447,1,1,1s1-0.447,1-1
+                  C59.997,15.127,45.357,0.487,27.362,0.487z"></path><path _ngcontent-iev-c64="" d="M27.362,9.517c13.016,0,23.604,10.589,23.604,23.604c0,0.553,0.447,1,1,1s1-0.447,1-1
+                  c0-14.118-11.486-25.604-25.604-25.604c-0.553,0-1,0.447-1,1S26.809,9.517,27.362,9.517z"></path><path _ngcontent-iev-c64="" d="M27.362,16.547c9.14,0,16.575,7.436,16.575,16.575c0,0.553,0.447,1,1,1s1-0.447,1-1c0-10.242-8.333-18.575-18.575-18.575
+                  c-0.553,0-1,0.447-1,1S26.809,16.547,27.362,16.547z"></path></g>
                 </svg>
                 +1234567890
               </h6>
               <h6>
-                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="256" height="256" viewBox="0 0 256 256" xml:space="preserve">
-                  <desc>Created with Fabric.js 1.7.22</desc>
-                  <defs>
-                  </defs>
-                  <g transform="translate(128 128) scale(0.72 0.72)" style="">
-                    <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;" transform="translate(-175.05 -175.05000000000004) scale(3.89 3.89)" >
-                      <path d="M 86.17 11.255 H 3.83 c -2.115 0 -3.83 1.715 -3.83 3.83 v 59.83 c 0 2.115 1.715 3.83 3.83 3.83 h 82.34 c 2.115 0 3.83 -1.715 3.83 -3.83 v -59.83 C 90 12.97 88.285 11.255 86.17 11.255 z M 84.55 69.598 c 0 1.739 -1.498 3.149 -3.346 3.149 h -3.792 V 26.717 L 45.016 54.692 L 12.843 26.91 v 45.836 H 9.051 c -1.848 0 -3.346 -1.41 -3.346 -3.149 V 20.403 c 0 -1.739 1.498 -3.149 3.346 -3.149 h 1.535 h 2.209 h 0.048 v 0.041 l 32.173 27.782 l 32.221 -27.823 h 2.209 l 0 0 h 1.757 c 1.848 0 3.346 1.41 3.346 3.149 V 69.598 z" style="stroke: none; stroke-width: 1; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: rgb(98,123,128); fill-rule: nonzero; opacity: 1;" transform=" matrix(1 0 0 1 0 0) " stroke-linecap="round" />
-                    </g>
-                  </g>
+                <svg _ngcontent-xxc-c64="" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 502.001 502.001" xml:space="preserve" style="enable-background: new 0 0 502.001 502.001;"><g _ngcontent-xxc-c64=""><g _ngcontent-xxc-c64=""><g _ngcontent-xxc-c64=""><path _ngcontent-xxc-c64="" d="M497.78,196.909L256.83,24.03c-3.484-2.5-8.175-2.5-11.659,0L4.22,196.909C1.595,198.731,0,201.889,0,205.07v264.694
+                  c-0.052,5.448,4.533,10.082,10,10.082h482c4.898,0,9.199-3.744,9.896-8.576c0.072-0.498,0.109-1.004,0.104-1.507V205.07
+                  C502,201.888,500.406,198.732,497.78,196.909z M245.597,195.07H41.092L251,44.463l225.6,161.865L336.768,346.16l-79.938-57.354
+                  c-3.464-2.486-8.239-2.454-11.659,0l-79.938,57.354L34.143,215.07h211.454c5.523,0,10-4.477,10-10S251.12,195.07,245.597,195.07z
+                   M20,229.212l128.764,128.764L49.776,429L20,450.363V229.212z M41.092,459.846l1.608-1.154L251,309.239l208.301,149.453
+                  l1.608,1.154H41.092z M482,450.363L452.225,429l-98.989-71.024L482,229.212V450.363z"></path><path _ngcontent-xxc-c64="" d="M138.727,410.927l-12.435,8.921c-10.711,7.685,1.48,23.554,11.659,16.25l12.435-8.921
+                  c4.487-3.219,5.515-9.467,2.295-13.955C149.462,408.736,143.215,407.707,138.727,410.927z"></path><path _ngcontent-xxc-c64="" d="M244.09,335.33l-71.327,51.176c-10.711,7.685,1.479,23.552,11.659,16.25l71.327-51.176
+                  c4.488-3.22,5.516-9.467,2.296-13.955C254.826,333.137,248.579,332.11,244.09,335.33z"></path><path _ngcontent-xxc-c64="" d="M257.203,336.45c-0.012-0.016-0.026-0.036-0.035-0.049C257.179,336.416,257.189,336.431,257.203,336.45z"></path><path _ngcontent-xxc-c64="" d="M257.168,336.402C257.107,336.317,257.097,336.303,257.168,336.402L257.168,336.402z"></path><path _ngcontent-xxc-c64="" d="M258.774,338.64c0.034,0.048,0.065,0.09,0.091,0.127C258.84,338.732,258.809,338.689,258.774,338.64z"></path><path _ngcontent-xxc-c64="" d="M258.865,338.767C259.019,338.982,258.994,338.947,258.865,338.767L258.865,338.767z"></path><path _ngcontent-xxc-c64="" d="M257.203,336.45c0.121,0.168,0.379,0.528,0.843,1.175c0.351,0.489,0.582,0.811,0.728,1.015
+                  C258.372,338.08,257.482,336.839,257.203,336.45z"></path><path _ngcontent-xxc-c64="" d="M293.148,215.07h23.776c5.523,0,10-4.477,10-10s-4.477-10-10-10h-23.776c-5.523,0-10,4.477-10,10
+                  S287.625,215.07,293.148,215.07z"></path></g></g></g>
                 </svg>
                 lorem123@gmail.com
               </h6>
