--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,8 +19,15 @@
                 <a href = "#" class = "nav-link">Home</a>
               </li>
               <li class = "nav-item">
-                <a href = "#" class = "nav-link">Visit Us</a>
+                <a class = "nav-link">Visit  
+                <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 17'><path fill='none' stroke='#1B2121' d='M31.393.75C19.645.75 16 16.278 16 16.278h-.107S12.248.75.5.75'/></svg>
+                </a>
+                <ul class="dropdown">
+                  <li><a routerLink = "/visit/studio">The Studio, Marrakech</a></li>
+                  <li><a routerLink = "/visit/apartment">The Apartment, NYC</a></li>
+                </ul>
               </li>
+
               <li class = "nav-item">
                 <a routerLink = "/products" class = "nav-link">Our Products</a>
               </li>
