--- a/src/app/page/our-process/our-process.component.scss
+++ b/src/app/page/our-process/our-process.component.scss
@@ -206,6 +206,15 @@ img{
             }
         }
      }
+     .process-section1{
+        .col1{
+            padding: 1rem;
+        }
+
+        .col2{
+            padding: 1rem;
+        }
+     }
  }
   @media(max-width:470px) {	
     #process-banner{
