--- a/src/app/page/our-story/our-story.component.html
+++ b/src/app/page/our-story/our-story.component.html
@@ -83,7 +83,7 @@
   <div class = "container">
       <div class = "box">
           <h2>Supporting Community</h2>
-          <p>We are dedicated to improving and evolving working conditions, benefits, wages and overall experience for our team members.</p>
+          <h5>We are dedicated to improving and evolving working conditions, benefits, wages and overall experience for our team members.</h5>
       </div>
   </div>
 </section>
