--- a/src/app/page/visit-us/the-apartment/the-apartment.component.html
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.html
@@ -116,7 +116,7 @@
     <div class = "col-lg-6 col-12">
         <div class = "col2">
             <h2>Visit Us in Marrakech</h2>
-            <p class = "mb-0">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</p>
+            <p>Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</p>
            <button type = "button" class = "btn blue-btn" routerLink = "/visit/studio">Explore the Studio</button>
         </div>
      </div>
