--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,7 +28,8 @@
         </li>
         <li class="dropdown nav-item">
           <a class="dropbtn nav-link" routerLinkActive = "active">Visit Us
-            <i class="fa fa-caret-down"></i>
+            
+<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 17'><path fill='none' stroke='#1B2121' d='M31.393.75C19.645.75 16 16.278 16 16.278h-.107S12.248.75.5.75'/></svg>
           </a>
           <div class=" dropdown-content">
               <hr class = "section_hr">
