--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -147,18 +147,18 @@
                         <div class="payment_method">
 
                          <div class="db_card">
-                           <!-- <label class="check_box ">Credit Card/Dabit Card
+                           <label class="check_box ">Credit Card/Dabit Card
                                 <input type="radio" checked="checked" name="radio">
                                 <span class = "float-right"> <img src="assets/img/checkout/american-express.png">
                                  <img src="assets/img/checkout/visa.png"></span>
 
 
                                 <span class="checkmark"></span>
-                           </label> -->
+                           </label>
 
                          </div>
                          <form>
-                             <!-- <div class = "row">
+                             <div class = "row">
                                  <div class = "col-md-12 col-12">
                                      <div class="form-group py-2">
                                          <input type="text"  name="cardnumber" formControlName="cardnumber" class="form-control" placeholder = "Card number">
@@ -181,12 +181,12 @@
 
                                  </div>
 
-                             </div> -->
+                             </div>
 
                          </form>
                         <div class="payment_option">
                             <ul class = "pt-2">
-                                <!-- <li>
+                                <li>
                                  <label class="check_box ">Google Pay UPI
                                      <img class="gpay_img" src="assets/img/checkout/google-pay.png">
 
@@ -207,7 +207,7 @@
                                          <input type="radio" name="radio">
                                           <span class="checkmark"></span>
                                      </label>
-                                </li> -->
+                                </li>
                                 <li>
                                  <label class="check_box ">Cash On Delivery
                                      <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
