--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -100,30 +100,28 @@
             <div class="preview" *ngIf="productVariation != ''">
               <form [formGroup]="variantForm">
                 <div *ngIf="productVariation.attribute1 != '' && productVariation.attribute2[1].variantnumber != 41">
-                  <label for="variant1" [ngSwitch]="productVariation.attribute1[1].variantnumber">
-                    <span *ngSwitchCase="variantTag"></span>
-                  </label>
+                  <label for="variant1">{{productVariation.attribute1[1].variant_tag}}</label>
                   <div *ngFor="let varient1 of productVariation.attribute1[0]">
                     <input type="radio" value="{{varient1}}" name="variant1" formControlName="variant1" (change)="changeVariation()">
                     <label for="male">{{varient1}}</label>
                   </div>
                 </div>
                 <div *ngIf="productVariation.attribute2[0] != '' && productVariation.attribute2[1].variantnumber != 41">
-                  <label for="variant2">Size:</label>
+                  <label for="variant2">{{productVariation.attribute2[1].variant_tag}}:</label>
                   <div *ngFor="let varient2 of productVariation.attribute2[0]">
                     <input type="radio" value="{{varient2}}" name="variant2" formControlName="variant2" (change)="changeVariation()">
-                    <label for="male">{{varient1}}</label>
+                    <label for="male">{{varient2}}</label>
                   </div>
                 </div>
                 <div *ngIf="productVariation.attribute3[0] != '' && productVariation.attribute2[1].variantnumber != 41">
-                  <label for="variant2">Size:</label>
+                  <label for="variant3">{{productVariation.attribute3[1].variant_tag}}:</label>
                   <div *ngFor="let varient3 of productVariation.attribute3[0]">
                     <input type="radio" value="{{varient3}}" name="variant3" formControlName="variant3" (change)="changeVariation()">
                     <label for="male">{{varient3}}</label>
                   </div>
                 </div>
                 <div *ngIf="productVariation.attribute4[0] != '' && productVariation.attribute2[1].variantnumber != 41">
-                  <label for="variant2">Size:</label>
+                  <label for="variant4">{{productVariation.attribute4[1].variant_tag}}:</label>
                   <div *ngFor="let varient4 of productVariation.attribute4[0]">
                     <input type="radio" value="{{varient4}}" name="variant4" formControlName="variant4" (change)="changeVariation()">
                     <label for="male">{{varient4}}</label>
